<resources>
    <string name="app_name">Browse Petitions in the UK</string>
    <string name="all_petitions">All petitions</string>
    <string name="open_petitions">Open petitions</string>
    <string name="closed_petitions">Closed petitions</string>
    <string name="rejected_petitions">Rejected petitions</string>
    <string name="awaiting_government_response">Awaiting government response</string>
    <string name="government_responses">Government responses</string>
    <string name="awaiting_a_debate_in_parliament">Awaiting a debate in Parliament</string>
    <string name="debated_in_parliament">Debated in Parliament</string>
    <string name="not_debated_in_parliament">Not debated in Parliament</string>
    <string name="published_petitions">Published petitions</string>
    <string name="not_available">Not available</string>
    <string name="recommend_app">UK Petitions</string>
    <string name="recommend_text">App to browse UK Petitions: https://play.google.com/store/apps/details?id=com.spitslide.petitionsbrowseruk</string>
    <string name="recommend_title">Recommend this app</string>
    <string name="rate_app_market">market://details?id=com.spitslide.petitionsbrowseruk</string>
    <string name="rate_app_web">http://play.google.com/store/apps/details?id=com.spitslide.petitionsbrowseruk</string>
</resources>
